# safeguards

./: .bandit.yml  .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  coverage.xml  index.html  mypy.ini  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml  test.yml  version-bump.yml
advanced/dynamic_budget/: index.html
advanced/multi_agent/: index.html
api/core/: index.html
api/monitoring/: index.html
concepts/: index.html
configuration/: index.html
development/architecture/: index.html
docs/: README.md  concepts.md  configuration.md  installation.md  memory_management.md  openai_integration.md  quickstart.md
docs-site/: mkdocs.yml
docs/advanced/: dynamic_budget.md  multi_agent.md
docs/api/: core.md  monitoring.md
docs/development/: architecture.md
docs/examples/: custom_rule_example.py  memory_cache_example.py  security_rules_example.py
docs/guides/: README.md  agent_coordination.md  agent_safety.md  budget_management.md  guardrails.md  monitoring.md  notifications.md  safety_policies.md
docs/usage/: basic.md
examples/: README.md  agent_budget_monitoring.py  budget_control_example.py  budget_monitoring.py  config.yaml  guardrails_example.py  human_in_loop_example.py  multi_agent.py  notification_setup.py  openai_agents_advanced.py  openai_agents_integration.py  retry_examples.py  single_agent.py
guides/: index.html
guides/agent_coordination/: index.html
guides/alert_configuration/: index.html
guides/budget_management/: index.html
guides/guardrails/: index.html
guides/human_in_loop/: index.html
guides/monitoring/: index.html
guides/notifications/: index.html
guides/plugins/: index.html
guides/resilience/: index.html
guides/safeguards/: index.html
guides/safety_policies/: index.html
installation/: index.html
memory_management/: index.html
openai_integration/: index.html
quickstart/: index.html
search/: search_index.json
src/agent_safety/: __init__.py  pyproject.toml
src/agent_safety/base/: __init__.py  auth.py  budget_coordinator.py  budget_impl.py
src/agent_safety/budget/: __init__.py  manager.py  realtime_tracker.py  simple_budget.py  token_tracker.py
src/agent_safety/budget/tests/: conftest.py  test_api_tracker.py  test_cost_estimation.py  test_cost_tracker.py  test_token_tracker.py
src/agent_safety/core/: __init__.py  agent_cost_tracker.py  api_tracker.py  budget_coordination.py  budget_reservation.py  cost_estimation.py  cost_tracker.py  dynamic_budget.py  monitoring.py  notifications.py  pool_health.py  token_tracker.py
src/agent_safety/guardrails/: __init__.py  budget.py  resource.py
src/agent_safety/monitoring/: metrics_analyzer.py  resource_monitor.py  storage.py  system_monitor.py
src/agent_safety/notifications/: __init__.py  manager.py
src/agent_safety/resource/: monitor.py
src/agent_safety/security/: auth.py  validation.py
src/agent_safety/swarm/: __init__.py  controller.py
src/agent_safety/templates/: email_alert.html  email_cost_alert.html  email_override_request.html  email_resource_alert.html  slack_alert.json  slack_override_request.json
src/agent_safety/templates/email/: override_request.html
src/agent_safety/testing/: fixtures.py  mock_implementations.py  test_budget_coordination.py  test_budget_reservation.py  test_pool_health.py
src/agent_safety/tests/: test_auth.py  test_budget_coordinator.py  test_security.py
src/agent_safety/types/: __init__.py  guardrail.py
src/agent_safety/violations/: __init__.py
src/safeguards/: __init__.py
src/safeguards/base/: budget.py
src/safeguards/testing/: __init__.py
tests/: README.md  conftest.py
tests/budget/: test_manager.py
tests/guardrails/: test_budget_guardrail.py  test_resource_guardrail.py
tests/integration/: .coverage  test_budget_monitoring.py  test_multi_agent_coordination.py
tests/monitoring/: test_base_monitoring.py  test_budget_monitor.py  test_metrics_analyzer.py  test_resource_monitor.py  test_system_monitor.py
tests/notifications/: test_notification_manager.py
tests/resource/: test_monitor.py
tests/safeguards/: __init__.py
tests/security/: conftest.py  test_auth.py  test_permission_guardrail.py  test_security_context.py  test_security_core.py  test_validation.py
tests/unit/: test_resilience.py
tests/utils/: test_data_generator.py
usage/basic/: index.html
(+12 files in other folders)
