[project]
name = "agent-safety"
version = "0.1.0"
description = "Safety and resource management framework for OpenAI Agents SDK"
authors = [
    {name = "FounderX Team", email = "team@founderx.dev"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "openai-agents>=0.1.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
slack = ["slack-sdk>=3.0.0"]
email = ["aiosmtplib>=2.0.0"]
monitoring = ["prometheus-client>=0.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_safety"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 